style.css
.section-1 {
    position: fixed;
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    filter: blur(0);
    z-index: -99;
    resize: both;
}

.music-section {
    position: relative;
    margin: 0 auto;
    overflow: hidden;
    text-align: center;
    resize: both;
}

.section-2 {
    display: flex;
}

/*.section-2 div {
    margin-top: 200px;
    position: relative;
    height: 500px;
    background-color: black;
    width: 500px;
    border: 4px solid black;
    opacity: 80%;
}

.section-2 .one {
    flex: 1 1 0%;
    margin-left: 20px;
    margin-right: 250px;
}

.section-2 .two {
    flex: 1 1 0%;
    margin-left: 250px;
    margin-right: 20px;
}
*/

.emblem-container {
    position: absolute;
    height: 100%;
    width: 99%;
    text-align: center;
    margin-top: 70px;
    overflow: hidden;
    padding-bottom: 0;
    resize: both;
}

.raiden-img {
    position: relative;
    width: auto;
    height: 80%;
    top: 80px;
    overflow: hidden;
    z-index: 2;
    resize: both;
}

.emblem-img:hover {
    filter: brightness(1.2);
}

.section-3 {
    position: absolute;
    width: 100%;
    height: 100vh;
    top: 1000px;
    left: 0;
    overflow: hidden;
    z-index: 1;
    resize: both;
}

.section-4 {
    position: relative;
    font-style: italic;
    height: 300px;
    padding-left: 500px;
    padding-right: 500px;
    top: 1200px;
    z-index: 3;
    color: white;
    text-align: center;
    resize: both;
}

h2 {
    background: black;
    opacity: 80%;
    filter: brightness(1.5);
    border-radius: 12.5px;
    padding: 10px;
    filter: contrast(0.98);
}

